tests/baselines/reference/classExtendingQualifiedName.errors.txt
classExtendingQualifiedName.ts(5,23): error TS2339: Property 'C' does not exist on type 'typeof M'.


==== classExtendingQualifiedName.ts (1 errors) ====
    module M {
        class C {
        }
    
        class D extends M.C {
                          ~
!!! error TS2339: Property 'C' does not exist on type 'typeof M'.
        }
    }